--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,17 +24,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Cache npm
-        uses: actions/cache@v4
-        with:
-          path: ~\AppData\Local\npm-cache
-          key: ${{ runner.os }}-node-${{ hashFiles('Release/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies
         working-directory: Release
-        run: npm ci
+        run: npm install
 
       - name: Build Windows portable
         working-directory: Release
@@ -79,17 +71,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Cache npm
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('Release/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
       - name: Install dependencies
         working-directory: Release
-        run: npm ci
+        run: npm install
 
       - name: Build macOS app (dmg/zip)
         working-directory: Release
