--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,14 @@ jobs:
         working-directory: Release
         run: npm install
 
+      - name: Ensure Rollup native binary (macOS)
+        working-directory: Release
+        shell: bash
+        run: |
+          VER=$(node -p "require('rollup/package.json').version")
+          echo "Installing @rollup/rollup-darwin-${{ matrix.arch }}@${VER}"
+          npm i -D @rollup/rollup-darwin-${{ matrix.arch }}@"${VER}"
+
       - name: Build macOS app (dmg/zip)
         working-directory: Release
         env:
