--- a/Release/package.json
+++ b/Release/package.json
@@ -28,7 +28,8 @@
         "@vitejs/plugin-react": "^4.3.1",
         "vite": "^5.4.8",
         "electron": "^28.0.0",
-        "electron-builder": "^24.9.1",
+        "electron-builder": "24.13.3",
+        "dmg-license": "^1.0.11",
         "concurrently": "^8.2.2",
         "wait-on": "^7.2.0"
     },
