--- a/Release/package.json
+++ b/Release/package.json
@@ -29,9 +29,11 @@
         "vite": "^5.4.8",
         "electron": "^28.0.0",
         "electron-builder": "24.13.3",
-        "dmg-license": "^1.0.11",
         "concurrently": "^8.2.2",
         "wait-on": "^7.2.0"
+    },
+    "optionalDependencies": {
+        "dmg-license": "^1.0.11"
     },
     "build": {
         "appId": "com.reflectance.spectra.viewer",
