ci(windows): install with --no-optional to skip mac-only optional deps (dmg-license)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,9 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
+      - name: Install dependencies (no optional)
         working-directory: Release
-        run: npm install
+        run: npm install --no-optional
 
       - name: Build Windows portable
         working-directory: Release
