--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,16 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Inject version from tag (if tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        working-directory: Release
+        shell: bash
+        run: |
+          TAG="${GITHUB_REF#refs/tags/}"
+          CLEAN="${TAG#v}"
+          echo "Setting package.json version to ${CLEAN} from tag ${TAG}"
+          node -e "const fs=require('fs');const p=require('./package.json');p.version='${CLEAN}';fs.writeFileSync('./package.json',JSON.stringify(p,null,2));"
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -73,6 +83,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Inject version from tag (if tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        working-directory: Release
+        shell: bash
+        run: |
+          TAG="${GITHUB_REF#refs/tags/}"
+          CLEAN="${TAG#v}"
+          echo "Setting package.json version to ${CLEAN} from tag ${TAG}"
+          node -e "const fs=require('fs');const p=require('./package.json');p.version='${CLEAN}';fs.writeFileSync('./package.json',JSON.stringify(p,null,2));"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
