--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "appId": "com.reflectance.spectra.viewer",
         "productName": "Reflectance Spectra Viewer",
         "icon": "electron/icons/icon.png",
+        "publish": "never",
         "directories": {
             "output": "dist-electron"
         },
