--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,6 +68,15 @@ jobs:
           name: windows-portable-dist
           path: dist-electron
 
+      - name: Attach to GitHub Release (tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist-electron/Reflectance-Spectra-Viewer-v*_win.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build-macos-x64:
     name: Build macOS (x64) dmg/zip
     runs-on: macos-13
@@ -139,6 +148,16 @@ jobs:
         with:
           name: mac-x64-dist
           path: dist-electron/renamed
+
+      - name: Attach macOS artifacts to Release (tag)
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist-electron/renamed/Reflectance.Spectra.Viewer-*_mac_x64.dmg
+            dist-electron/renamed/Reflectance.Spectra.Viewer-*_mac_x64.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   build-web:
     name: Build web (Vite)
