--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "electron:build:win": "vite build && electron-builder --win",
         "electron:build:mac": "vite build && electron-builder --mac",
         "electron:build:all": "vite build && electron-builder --win --mac",
-        "pack:zip": "powershell -NoProfile -Command \"$v=(Get-Content package.json -Raw | ConvertFrom-Json).version; $parent='Reflectance Spectra Viewer'; $src=Join-Path 'dist-electron' 'win-unpacked'; $dst=Join-Path 'dist-electron' $parent; if (Test-Path $dst) { Remove-Item -Recurse -Force $dst }; Copy-Item -Path $src -Destination $dst -Recurse; $zip=Join-Path 'dist-electron' ('Reflectance-Spectra-Viewer-v{0}-windows-portable.zip' -f $v); if (Test-Path $zip) { Remove-Item -Force $zip }; Compress-Archive -Path (Join-Path $dst '*') -DestinationPath $zip -Force; Remove-Item -Recurse -Force $dst\""
+        "pack:zip": "powershell -NoProfile -Command \"$v=(Get-Content package.json -Raw | ConvertFrom-Json).version; $parent='Reflectance Spectra Viewer'; $src=Join-Path 'dist-electron' 'win-unpacked'; $dst=Join-Path 'dist-electron' $parent; if (Test-Path $dst) { Remove-Item -Recurse -Force $dst }; Copy-Item -Path $src -Destination $dst -Recurse; $zip=Join-Path 'dist-electron' ('Reflectance-Spectra-Viewer-v{0}-windows-portable.zip' -f $v); if (Test-Path $zip) { Remove-Item -Force $zip }; Compress-Archive -Path (Join-Path $dst '*') -DestinationPath $zip -Force; Remove-Item -Recurse -Force $dst\"",
+        "test": "vitest",
+        "test:run": "vitest run"
     },
     "dependencies": {
         "plotly.js-dist-min": "^2.34.0",
@@ -26,6 +28,9 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.1",
+        "@testing-library/react": "^16.0.0",
+        "@testing-library/jest-dom": "^6.5.0",
+        "vitest": "^2.1.3",
         "vite": "^5.4.8",
         "electron": "^28.0.0",
         "electron-builder": "24.13.3",
