--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@vitejs/plugin-react": "^4.3.1",
         "@testing-library/react": "^16.0.0",
         "@testing-library/jest-dom": "^6.5.0",
+        "jsdom": "^25.0.0",
         "vitest": "^2.1.3",
         "vite": "^5.4.8",
         "electron": "^28.0.0",
